# FIT-CTU

./: .gitignore
BI-PHP/hw-01/: composer.json
BI-PHP/hw-01/src/: game.php
BI-PHP/hw-02/src/: shopping.php
BI-PHP/hw-03/src/: main.php
BI-PHP/hw-04/: autoloader.php
BI-PHP/hw-04/src/: Node.php
BI-PHP/hw-05/: README.md  composer.json  run.php
BI-PHP/hw-05/src/: Builder.php  Invoice.php  Renderer.php
BI-PHP/hw-06/: hw-06.db
BI-PHP/hw-08/: hw-08.db
BI-PHP/hw-09/: README.md
BI-PHP/hw-10/: README.md  composer.json
BI-PHP/hw-10/src/: StarCommand.php
BI-PJP/thedrake/: module-info.java
BI-TWA/semestral-project/: .env  compose.yaml  composer.json  readme.md
BI-TWA/team-bitwa/: readme.md
NI-KOP/: exam.md
NI-MPI/: NI-MPI-kaspafil.txt  README.md  main.py  pyproject.toml
NI-MVI/: .pre-commit-config.yaml  README.md  evaluate.py  extract_skills.py  milestone.md  plot.py  pyproject.toml  skills.csv  static_variables.py  train.py
NI-MVI/handlers/: DatasetHandlers.py  TorchTextTokenizerHandler.py
NI-MVI/models/: lstm.py  nanotransformer.py
NI-MVI/trained_models/: bert_lstm_nodrop_stats.txt  bert_transform_nodrop_stats.txt
NI-REV/: exam.md
NI-REV/crackme/: solution.md
NI-REV/hw01/: ge.py  readme.md
NI-REV/hw02/: hooker.cpp  hooker.h
NI-REV/hw03/: readme.md
NI-REV/hw04/: dllmain.c  injector.c  malloc_debug.cpp  malloc_debug.h  tester.c  uninjector.c
NIE-BLO/: security_audit_bcbr720_repo.md
NIE-BLO/CTF-FilipKaspar/: README.md
NIE-BLO/NIE-BLO-FilipKaspar/: README.md  wake.toml
NIE-VSM/HW1/: code.ipynb  pyproject.toml  report.docx
(+147 files in other folders)
