[project]
name = "mvi-sp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.0"
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=1.21.0",
    "pandas>=2.2.3",
    "pre-commit>=4.0.1",
    "scikit-learn>=1.5.2",
    "sentence-transformers>=3.3.1",
    "tk>=0.1.0",
    "torch==2.3.0",
    "torchtext==0.18.0",
    "transformers>=4.46.3",
]

[tool.black]
line-length = 120
target_version = ["py311"]

[tool.isort]
py_version = "311"
src_paths = "dj"
multi_line_output = 3
lines_after_imports = 2
line_length = 120
include_trailing_comma = true
use_parentheses = true

[tool.ruff]
select = ["E", "F", "DJ", "S", "B", "W", "T20"]
ignore = [
    "T201",
]
line-length = 120  # same as black
target-version = "py311"

[tool.mypy]
disallow_untyped_defs = true
